        - cache urgency hint locally to avoid server rtt on every focus change.
	- perl 5.10 needs PERL_SYS_INIT3 on hppa.
	- ignore byte-order marks and do not treat them like combining characters.
        - fix build issue when CURSOR_BLINK is not defined (Emanuele Giaquinta).
        - do some µ-optimisations to the character fast path.

9.05 Sun Jun 15 20:09:20 CEST 2008
	- new option --cd/chdir to set the starting working directory.
        - tabbed extension now starts in the "correct" working directory.
	- work around fedora 9 providing isastream but not the relevant
          header file for it (report by Tuncer Ayaz).
	- upgrade libev, fixing a bug in the select backend
          with more than 31 file descriptors on non-linux 64 bit systems.
	- correctly reset the multibyte state to the initial one
          after EILSEQ (patch by Neil Booth). This fixes the
          issue of rxvt-unicode not properly displaying text after an illegal
          sequence on NetBSD and probably other systems.
        - more intelligent property handling with -pe tabbed, works around
          broken window managers (kwm et al.), saves bandwidth and should
          help working window managers as well.
	- made tabs moveable (based on a patch by Petr Machata).
        - implement ESC [ 3 K as a more rational alternative to ESC [ 0 K.
        - support relative paths for RXVT_SOCKET in urxvtd.
        - the tabbed extension now blindly copies over all (rxvt-) resources
          from the toplevel window to the children.
        - better diagnostic on 0x0 window geometries.
        - update AnyEvent API to version 3.4 and above.
        - document the default value of :0 for DISPLAY.
        - rename perl method XChangeWindowProperty to XChangeProperty.

9.02 Tue Jan 29 11:58:36 CET 2008
	- the "exg makes everybody happy" release.
	- fix build with !xft.
	- always compile in plain style scrollbar (simplifies code and looks great).

9.01 Sat Jan 26 20:49:27 CET 2008