@@ -31,6 +31,8 @@ TODO: cursor over overlays, when focus change?
 	- ignore byte-order marks and do not treat them like combining characters.
         - fix build issue when CURSOR_BLINK is not defined (Emanuele Giaquinta).
         - do some µ-optimisations to the character fast path.
+        - try to work around linux first breaking sched_yield and now breaking
+          the only known workaround.
 
 9.05 Sun Jun 15 20:09:20 CEST 2008
 	- new option --cd/chdir to set the starting working directory.
